--- a/repos/styles.css
+++ b/repos/styles.css
@@ -2,4 +2,17 @@
  * Styles for repo documentation
  */
 
+html {
+    margin: 0px;
+}
 
+body {
+    background: rgb(28,28,28);
+    font-family: Arial, sans-serif;
+    color: rgb(120,120,120);
+    overflow: auto;
+}
+
+hr {
+    border-color: #9c9c9c;
+}
