--- a/repos/styles.css
+++ b/repos/styles.css
@@ -16,3 +16,12 @@ body {
 hr {
     border-color: #9c9c9c;
 }
+
+span.code {
+    border-radius: 4px;
+    padding: 4px;
+    background: rgb(40,40,40);
+    font-family: monospace;
+    color: rgb(120,120,160);
+    border: 1px solid black;
+}
