--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,24 @@ object {
 }
 
 div.links {
+    height: 90%;
+    overflow: auto;
+}
+
+div.about {
+    padding-top: 2px;
+    padding-left: 5px;
+    background: rgb(75,75,75);
+    color: #ffffff;
+    position: absolute;
+    top: 90%;
+    height: 10%;
+    left: 0px;
+    width: 270px;
+    box-shadow: 0px -2px 10px rgb(20,20,20);
+}
+
+div.container { 
     background: rgb(45,45,45);
     box-shadow: 1px 0px 10px #000;
     position: absolute;
@@ -35,7 +53,7 @@ div.links {
     top: 0px;
     left: 0px;
     padding: 0px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 ul {
@@ -50,10 +68,12 @@ li::before {
 }
 
 span.link {
+    width: 100%;
     color: rgb(200,200,200);
 }
 
 span.link:hover {
+    color: #cc0000;
     cursor: pointer;
     text-decoration: underline;
 }
